--- a/sbb/src/main/resources/application.properties
+++ b/sbb/src/main/resources/application.properties
@@ -21,22 +21,22 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=system
-spring.datasource.password=luckyjudy12!
+spring.datasource.password=password
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # google mail
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
-#spring.mail.username=jihee9711@gmail.com
-#spring.mail.password=luckyjudy123
+#spring.mail.username=[사용자아이디]@gmail.com
+#spring.mail.password=password
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
 
 # naver mail
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
-spring.mail.username=jihee9711
-spring.mail.password=wlgmlskarnd12.
+spring.mail.username=[사용자이름]
+spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 
